app/assets/sass/ail.scss
/* Definitions for AiL - Site based on Gumby */
@charset "UTF-8";
@import url(//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
@import 'gumby/gumby';
@import 'jquery.bxslider';

$font-family:  'Source Sans Pro', sans-serif !important;
$body-font-color: #000;

$color_head: #d2dc00;
$color_one: #42abcb;
$color_two: #ff9d1e;
$color_three: #ca2162;
$color_page_bg: #ffffff;
$font_color_head: #17297c;
$color_heading: #666666;
$color_soft_margin: #c5baa6;
$color_footer: #a2a2a2;

$header_height: 128px;
$nav_height: 60px;

$semibold: 600;

body, p, div {
  color: #000;
  font-weight: normal;
}
body h1,
body h2,
body h3 {
  color: #000;
}

body .row {
  b {
    font-weight: bold;
  }
  .columns i {
    font-style: italic;
  }
  u {
    text-decoration: underline;
  }
}

.float-left {
  float: left;
}
.float-right {
  float: right;
}
img.float-right,
img.float-left {
  display: inline;
  max-width: 31.914%;
}
.four.columns img.float-right,
.four.columns img.float-left {
  max-width: 100%;
}
img.float-right {
  margin: 0.375em 0 0.375em 0.8em;
}
img.float-left {
  margin: 0.375em 0.8em 0.375em 0;
}
img.centered {
  width: 100%;
  margin: 0.5em auto;
  float: left;
  clear: both;
}

.home section {
  div {
    font-size: 1.12em;
  }
  .four.columns,
  .six.columns {
    font-size: 0.75em;
    padding: 0 1em;
  }
}
section {
  /*
  header + div {
    font-size: 0.875em;
  }
  */
  /*
  .four.columns,
  .six.columns {
    font-size: 0.75em;
    padding: 0 1em;
  }
  */
  div.columns {
    font-size: 0.875em;
  }
  table tr td,
  table tr th,
  form li.field {
    font-size: 100%;
  }
  .centered {
    text-align: center;
  }
  .eight.columns + .four.columns {
    float: right;
    padding-right: 0px;
  }
  div.columns {
    margin: 1.5em 0;
  }
  div.columns.cojoined-bottom,
  div.columns.cojoined-both {
    margin-bottom: 0px !important;
  }
  div.columns.cojoined-top,
  div.columns.cojoined-both {
    margin-top: 0px !important;
  }
}

section > h1,
section > div > h1,
.row > h1,
section header h1 {
  margin: 30px auto 20px;
  min-width: 320px;
  padding-left: 20px;
  padding-right: 20px;
  width: 100%;
  font-size: 2.25em;
  font-weight: $semibold;
  color: #fff;
  background-color: $color_footer;
}
.row > h1,
.row > h2,
.row > h3,
section header > h1 {
  text-align: center;
}
.row > h1:first-child,
.row > h2:first-child,
.row > h3:first-child {
  margin-top: 1.8em;
}
.row h3 {
  /* font-weight: $semibold; */
  font-size: 1.625em;
}

body a {
  color: $color_one;
  text-decoration: underline;
}
body a:hover {
  color: $color_two;
}
/* Links in Text Body */
body section div {
  a {
    color: $color_one;
    font-weight: $semibold;
  }
  a:hover {
    color: $font_color_head;
  }
  a:after {
    font-family: "#{$icons}";
    font-size: 0.8em;
    content: " #{$entypo-icon-fast-forward}";
  }
}

body #content-top {
  display: block;
  width: 100%;
}

body #content-top + section.row > div:first-child {
  padding-top: 1.5em;
}

.clickable {
  cursor: pointer;
}

/* Table-Colors */

table thead {
  background-color: $color_one;
  color: #FFFFFF;
  th {
    text-align: left;
  }
}
table tbody tr td:first-child {
  background-color: #ddeff0;
}
table tbody tr:nth-child(even) td:first-child {
  background-color: #c0e1eb; /* #b4d6e0; */
}
table tbody tr:nth-child(even) td {
  background-color: #f1f1f1;
}

/* Content Lists */
section.row ul {
  margin: 0.5em 0;
}
section.row ul li {
  padding-left: 1.625em;
}
section.row ul li:before {
  font-family: "#{$icons}";
  font-size: 120%;
  margin-left: -1.25em;
  margin-right: 0.5em;
  color: $color_one;
  content: " #{$entypo-icon-check}";
}
/* These styles do not apply to: slideshows and tiles */
section.slideshow.row ul li:before,
section.row ul.tiles li:before,
section.row form ul li:before,
section.row ul.form li:before,
section.row ul li.field:before {
  content: '';
  margin: 0;
}
section.slideshow.row ul li,
section.row ul.tiles li,
section.row form ul li,
section.row ul.form li,
section.row ul li.field {
  padding-left: 0;
}

/* Float all body content */
body > header {
  float: left;
}

/* Content-Images */
section .column img {
  width: 100%;
  float: left;
  clear: both;
}
section .column img.left {
  width: 65%;
  float: left;
  clear: none;
}
section .column img.right {
  width: 65%;
  float: right;
  clear: none;
}
section .column img.small {
  width: 31.9%;
}


/* Header */
body > header {
  position: fixed;
  top: 0;
  left: 0;
  background-color: $color_head;
  height: $header_height + $nav_height - 5px;
  width: 100%;
  z-index: 1500;
}
body {
  padding-top: $header_height + $nav_height + 31px;
}
body.home {
  padding-top: $header_height + $nav_height - 5px;
}
header #identity {
  float: left;
  height: $header_height - 5px;
  padding: 5px 4% 0;
  overflow-y: hidden;
  hgroup {
    padding-top: 1.2em;
    padding-left: 0.75em;
    max-width: 700px;
    h1 {
      width: 100%;
      font-size: 2.45em;
      color: $color_page_bg;
      font-weight: $semibold;
      /* font-weight: bold; */
      /* text-shadow: 0 1px 2px #181f3c, 0 1px 0 #181f3c; */
      padding-bottom: 0;
      text-align: left;
    }
    h2 {
      font-size: 1.25em;
      font-weight: bold;
      color: #fff;
      padding-top: 0.15em;
      text-align: left;
    }
  }
  div * {
    float: left;
  }
}
header {
  #direct_access {
    position: absolute;
    top: 43px;
    right: 2%;
    width: 320px;
    li {
      border-left: 1px solid $font_color_head;
      padding: 0 0.45em;
      display: inline;
    }
    li:nth-child(1) {
      border-left: 0;
    }
  }
  a, a:visited {
    color: $font_color_head;
    font-size: 1em;
    line-height: 1.05em;
    font-weight: $semibold;
    text-decoration: none;
  }
  a:hover {
    color: $color_page_bg;
  }
}
/* ... */

